force-app/main/default/objects/Invoice__c/fields/Actual_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Due_Date__c</fullName>
    <formula>Invoice_Sent_Received_Date__c  +  CASE(TEXT(Project__r.Payment_Term__c),&apos;NET10&apos;, 10, &apos;NET30&apos;, 30, &apos;NET45&apos;, 45 , &apos;NET60&apos;,60 ,&apos;NET90&apos;, 90 ,10)</formula>
    <label>Actual Due Date</label>
    <type>Date</type>
</CustomField>