force-app/main/default/objects/Invoice__c/fields/Billed_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Billed_to_Client__c</fullName>
    <label>Billed to Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>