force-app/main/default/objects/Invoice__c/fields/Billing_Information__c.field-meta.xml
<CustomField>
    <fullName>Billing_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Information</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Project__c</field>
            <operation>equals</operation>
            <valueField>Billing_Information__c.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Billing_Information__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>