force-app/main/default/objects/Invoice__c/fields/Client_Invoice_Reference__c.field-meta.xml
<CustomField>
    <fullName>Client_Invoice_Reference__c</fullName>
    <label>Client Invoice Reference #</label>
    <length>80</length>
    <type>Text</type>
</CustomField>