force-app/main/default/objects/Invoice__c/fields/Customer_Project__c.field-meta.xml
<CustomField>
    <fullName>Customer_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Vendor Invoices</relationshipLabel>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>