force-app/main/default/objects/Invoice__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <formula>Invoice_Date__c + 

CASE(TEXT(Project__r.Payment_Term__c),&apos;NET10&apos;, 10, &apos;NET30&apos;, 30, &apos;NET45&apos;, 45 , &apos;NET60&apos;,60 ,&apos;NET90&apos;, 90 ,10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>