force-app/main/default/objects/Invoice__c/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <description>Exchange Rate Based on currency of the TIG Entity chosen on project.</description>
    <formula>(1/ CURRENCYRATE(TEXT(CurrencyIsoCode)) ) * ( CURRENCYRATE(TEXT(Project__r.TIG_Entity_Name__r.CurrencyIsoCode)) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>