force-app/main/default/objects/Invoice__c/fields/Invoice_Booked__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Booked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked by Finance Team manually when purchase invoice is Approved by AP Executive.</description>
    <label>Invoice Booked</label>
    <type>Checkbox</type>
</CustomField>