force-app/main/default/objects/Invoice__c/fields/Invoice_Sent_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Sent_Received_Date__c</fullName>
    <label>Invoice Sent/Received Date</label>
    <type>Date</type>
</CustomField>