force-app/main/default/objects/Invoice__c/fields/Invoice_Series__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Series__c</fullName>
    <formula>CASE(TIG_Entity__c, &apos;TIG India&apos;, &apos;TICL/2017-18/&apos;+ SUBSTITUTE(Name, &apos;I-0&apos;, &apos;&apos;), &apos;TIG UK&apos;, &apos;HCT&apos;+ SUBSTITUTE(Name, &apos;I-&apos;, &apos;&apos;), &apos;TIG Malasiya&apos;, SUBSTITUTE(Name, &apos;I-&apos;, &apos;&apos;)	, &apos;TIG Australia&apos;, &apos;INV-&apos;+ Customer__r.Trade_Name__c  + SUBSTITUTE(Name, &apos;I-&apos;, &apos;&apos;), &apos;E&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Series</label>
    <type>Text</type>
</CustomField>