force-app/main/default/objects/Invoice__c/fields/Physical_Invoice_Received__c.field-meta.xml
<CustomField>
    <fullName>Physical_Invoice_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Physical Invoice Received</label>
    <type>Checkbox</type>
</CustomField>