force-app/main/default/objects/Invoice__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Purchase Order</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND ((2 AND 3) OR (4 AND 5))</booleanFilter>
        <filterItems>
            <field>$Source.Project__c</field>
            <operation>equals</operation>
            <valueField>Order__c.Project__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sales Invoice</value>
        </filterItems>
        <filterItems>
            <field>Order__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sales Order</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Purchase Invoice</value>
        </filterItems>
        <filterItems>
            <field>Order__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Purchase Order</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>