force-app/main/default/objects/Invoice__c/fields/Reason_For_Dispute__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Dispute__c</fullName>
    <label>Reason For Dispute</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dispute in client billing</fullName>
            </value>
            <value>
                <fullName>Client billing approval not received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>