force-app/main/default/objects/Invoice__c/fields/Reason_for_Late_Submission__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Late_Submission__c</fullName>
    <label>Reason for Late Submission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Approval Not Received on Time</fullName>
            </value>
            <value>
                <fullName>Client PO Not Received on Time</fullName>
            </value>
            <value>
                <fullName>TIG internal management exceptional approval is required</fullName>
            </value>
            <value>
                <fullName>Incorrect Billing Sheet received from SDM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>