force-app/main/default/objects/Invoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Check SOW &amp; PO</fullName>
            </value>
            <value>
                <fullName>Validate Invoice</fullName>
            </value>
            <value>
                <fullName>Review and Update Taxation</fullName>
            </value>
            <value>
                <fullName>Invoice Ready to be Sent to Client</fullName>
            </value>
            <value>
                <fullName>Disputed</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Exception Approval Needed</fullName>
            </value>
            <value>
                <fullName>Send to Department Head</fullName>
            </value>
            <value>
                <fullName>Send to C Group</fullName>
            </value>
            <value>
                <fullName>Sent To Client</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>