force-app/main/default/objects/Invoice__c/fields/TIG_Amount__c.field-meta.xml
<CustomField>
    <fullName>TIG_Amount__c</fullName>
    <formula>TEXT(Project__r.TIG_Entity_Name__r.CurrencyIsoCode)  &amp; &apos; &apos; &amp;  TEXT( ROUND((Exchange_Rate__c *  Amount__c),2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TIG Amount</label>
    <type>Text</type>
</CustomField>