force-app/main/default/objects/Invoice__c/fields/TIG_Entity__c.field-meta.xml
<CustomField>
    <fullName>TIG_Entity__c</fullName>
    <formula>TEXT(Project__r.Total_IT_Billing_Entity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TIG Entity</label>
    <type>Text</type>
</CustomField>