force-app/main/default/objects/Invoice__c/fields/TIG_Entity_Bank_Information__c.field-meta.xml
<CustomField>
    <fullName>TIG_Entity_Bank_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TIG Entity Bank Information</label>
    <referenceTo>TIG_Entity_Bank_Information__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>