force-app/main/default/objects/Invoice__c/fields/TIG_Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>TIG_Outstanding_Amount__c</fullName>
    <formula>TEXT(Project__r.TIG_Entity_Name__r.CurrencyIsoCode) &amp; &apos; &apos; &amp; TEXT( ROUND((Exchange_Rate__c *  Outstanding_Amount__c ),2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TIG Outstanding Amount</label>
    <type>Text</type>
</CustomField>