force-app/main/default/objects/Invoice__c/fields/VP_Reference__c.field-meta.xml
<CustomField>
    <fullName>VP_Reference__c</fullName>
    <label>VP Reference #</label>
    <length>80</length>
    <type>Text</type>
</CustomField>