force-app/main/default/objects/Invoice__c/recordTypes/Indirect_Purchase_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Indirect_Purchase_Invoice</fullName>
    <active>true</active>
    <label>Indirect Purchase Invoice</label>
</RecordType>