force-app/main/default/objects/Invoice__c/recordTypes/Purchase_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Purchase_Invoice</fullName>
    <active>true</active>
    <label>Purchase Invoice</label>
</RecordType>