force-app/main/default/objects/Invoice__c/recordTypes/Sales_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Sales_Invoice</fullName>
    <active>true</active>
    <label>Sales Invoice</label>
</RecordType>