force-app/main/default/objects/Invoice__c/validationRules/Check_Dispute_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Dispute_Amount</fullName>
    <active>false</active>
    <errorConditionFormula>IF( ISPICKVAL(Status__c, &apos;Disputed&apos;) &amp;&amp; ISBLANK(Disputed_Amount__c),true,false)</errorConditionFormula>
    <errorMessage>Please enter disputed amount before rejection</errorMessage>
</ValidationRule>