force-app/main/default/objects/Invoice__c/validationRules/Check_Line_Items.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Line_Items</fullName>
    <active>true</active>
    <errorConditionFormula>Number_of_Invoice_Line_Items__c = 0 &amp;&amp; NOT(ISPICKVAL(Stage__c, &apos;Draft&apos;))</errorConditionFormula>
    <errorMessage>Please add Line Items to Invoice before submitting for Approval</errorMessage>
</ValidationRule>