force-app/main/default/objects/Invoice__c/validationRules/Customer_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Check</fullName>
    <active>true</active>
    <errorConditionFormula>IF( RecordType.DeveloperName == &apos;Sales_Invoice&apos; &amp;&amp;  Purchase_Order__r.Customer__c !=  Customer__c, true, false)</errorConditionFormula>
    <errorDisplayField>Customer__c</errorDisplayField>
    <errorMessage>Mismatch in Customer and Selected Purchase Order</errorMessage>
</ValidationRule>