force-app/main/default/objects/Invoice__c/validationRules/DisputeAmountCantbeGreaterthanTotalAmoun.validationRule-meta.xml
<ValidationRule>
    <fullName>DisputeAmountCantbeGreaterthanTotalAmoun</fullName>
    <active>true</active>
    <description>Disputed amount can not be greater than invoice total amount</description>
    <errorConditionFormula>Disputed_Amount__c &gt; Total_Amount__c</errorConditionFormula>
    <errorDisplayField>Disputed_Amount__c</errorDisplayField>
    <errorMessage>Disputed Amount can not be greater than Total Amount.</errorMessage>
</ValidationRule>