force-app/main/default/objects/Invoice__c/validationRules/Invoice_Amount_Greater_than_PO_Balance.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_Amount_Greater_than_PO_Balance</fullName>
    <active>true</active>
    <errorConditionFormula>Purchase_Order__r.PO_Balance__c &lt; Total_Amount__c &amp;&amp; NOT( ISPICKVAL( Stage__c ,&apos;Draft&apos;))</errorConditionFormula>
    <errorMessage>PO Balance is running low, please select another PO for this invoice</errorMessage>
</ValidationRule>