force-app/main/default/objects/Invoice__c/validationRules/InvoiceCurrencyShouldbeEqualtoPOCurrency.validationRule-meta.xml
<ValidationRule>
    <fullName>InvoiceCurrencyShouldbeEqualtoPOCurrency</fullName>
    <active>true</active>
    <description>Invoice currency should be equal to PO currency</description>
    <errorConditionFormula>Text(CurrencyIsoCode) != Text(Purchase_Order__r.CurrencyIsoCode)</errorConditionFormula>
    <errorMessage>Please ensure that the Invoice currency is the same as PO currency</errorMessage>
</ValidationRule>