force-app/main/default/objects/Invoice__c/validationRules/InvoiceDate.validationRule-meta.xml
<ValidationRule>
    <fullName>InvoiceDate</fullName>
    <active>true</active>
    <description>Invoice date is always in between of project start date and project end date.</description>
    <errorConditionFormula>NOT(Project__r.Project_Start_Date__c   &lt;  Invoice_Date__c  &amp;&amp;  Invoice_Date__c   &lt;  Project__r.Project_End_Date__c)</errorConditionFormula>
    <errorMessage>Invoice date should be in between of project start date and project end date.</errorMessage>
</ValidationRule>