force-app/main/default/objects/Invoice__c/validationRules/InvoiceDateShouldbeGreaterThanPO_StartD.validationRule-meta.xml
<ValidationRule>
    <fullName>InvoiceDateShouldbeGreaterThanPO_StartD</fullName>
    <active>true</active>
    <description>Invoice date should be greater than PO Start date</description>
    <errorConditionFormula>Invoice_Date__c &lt; Purchase_Order__r.PO_Start_Date__c</errorConditionFormula>
    <errorDisplayField>Invoice_Date__c</errorDisplayField>
    <errorMessage>Invoice date should be greater than PO Start date</errorMessage>
</ValidationRule>