force-app/main/default/objects/Invoice__c/validationRules/PO_Released.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_Released</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(Purchase_Order__r.PO_Status__c, &apos;Released&apos;)) &amp;&amp; NOT( ISPICKVAL( Stage__c ,&apos;Draft&apos;))</errorConditionFormula>
    <errorMessage>Selected PO should be in released status before the invoice is submitted</errorMessage>
</ValidationRule>