force-app/main/default/objects/Invoice__c/validationRules/PONumber.validationRule-meta.xml
<ValidationRule>
    <fullName>PONumber</fullName>
    <active>true</active>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>PO Number is required</errorMessage>
</ValidationRule>