force-app/main/default/objects/Invoice__c/validationRules/Reason_for_dispute_field_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_for_dispute_field_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.Name ==&apos;Purchase Invoice&apos;, TEXT(Stage__c) ==&apos;Rejected&apos;,TEXT(Reason_For_Dispute__c)==&apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Reason_For_Dispute__c</errorDisplayField>
    <errorMessage>Please enter Reason For Dispute before rejection</errorMessage>
</ValidationRule>