force-app/main/default/objects/Invoice__c/validationRules/Vendor_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Vendor_Check</fullName>
    <active>true</active>
    <errorConditionFormula>IF( RecordType.DeveloperName == &apos;Purchase_Invoice&apos; &amp;&amp;  Purchase_Order__r.Vendor__c  !=  Customer__c, true, false)</errorConditionFormula>
    <errorDisplayField>Customer__c</errorDisplayField>
    <errorMessage>Mismatch in Vendor and Purchase Order</errorMessage>
</ValidationRule>