force-app/main/default/objects/Invoice__c/listViews/AP_Executive_Sr_AP_Executive_Invoice.listView-meta.xml
<ListView>
    <fullName>AP_Executive_Sr_AP_Executive_Invoice</fullName>
    <filterScope>Queue</filterScope>
    <label>AP Executive/Sr. AP Executive</label>
    <queue>AP_Executive_Sr_AP_Executive</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>