force-app/main/default/objects/Invoice__c/listViews/AR_Executives_AR_Sr_Executives_Invoice.listView-meta.xml
<ListView>
    <fullName>AR_Executives_AR_Sr_Executives_Invoice</fullName>
    <filterScope>Queue</filterScope>
    <label>AR Executives / AR Sr Executives</label>
    <queue>AR_Executives_AR_Sr_Executives</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>