force-app/main/default/objects/Invoice__c/listViews/Finance_Manager_Invoice.listView-meta.xml
<ListView>
    <fullName>Finance_Manager_Invoice</fullName>
    <filterScope>Queue</filterScope>
    <label>Finance Manager</label>
    <queue>Finance_Manager</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>