force-app/main/default/objects/Invoice__c/listViews/Sales.listView-meta.xml
<ListView>
    <fullName>Sales</fullName>
    <columns>NAME</columns>
    <columns>Billing_Information__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Invoice__c.Sales_Invoice</value>
    </filters>
    <label>Sales</label>
</ListView>